# binaryClockQt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.badb20e  README.md  main.cpp  main.qml  qt6.natvis  resources.qrc  resources.qrc.autosave
binaryClock/: BinaryClock.qml  binaryClock.cpp  binaryClock.h
components/Communication/Network/: network.cpp  network.h
components/Communication/Network/Extensions/: jsonhandler.cpp  jsonhandler.h
components/Communication/serial/i2c/: i2c.cpp  i2c.h
components/binaryClock/: BinaryClock.qml  binaryClock.cpp  binaryClock.h
components/config/: config.cpp  config.h
components/position/: position.cpp  position.h
components/wateringSystem/: wateringsystem.cpp  wateringsystem.h
components/weatherForecast/: WeatherForecast.qml  weatherforecast.cpp  weatherforecast.h
core/: CMakeLists.txt
core/binaryClock/: CMakeLists.txt  binaryClock.cpp  binaryClock.h
core/communication/: CMakeLists.txt
core/communication/network/: CMakeLists.txt  network.cpp  network.h
core/communication/network/extensions/: CMakeLists.txt  jsonhandler.cpp  jsonhandler.h
core/communication/serial/: CMakeLists.txt  serial.h
core/communication/serial/i2c/: CMakeLists.txt  i2c.h
core/config/: CMakeLists.txt  config.cpp  config.h
core/position/: CMakeLists.txt  position.cpp  position.h
core/position/PositionResources/: CMakeLists.txt  PositionDBusResource.cpp  PositionDBusResource.h  PositionNetworkResource.cpp  PositionNetworkResource.h  PositionPluginResource.cpp  PositionPluginResource.h  PositionResource.h
core/position/positionResources/: CMakeLists.txt  positionDBusResource.cpp  positionDBusResource.h  positionNetworkResource.cpp  positionNetworkResource.h  positionPluginResource.cpp  positionPluginResource.h
core/util/: CMakeLists.txt  util.cpp  util.h
core/weatherForecast/: CMakeLists.txt  weatherforecast.cpp  weatherforecast.h
crossCompileInfo/: Dockerfile  goodcmd.txt  natvisSetupForLinuxVsCode.txt  toolchain.cmake  toolchainQt.cmake
mainApp/: CMakeLists.txt  mainApp.cpp  mainApp.h
mainApp/threadModul/: threadModul.h
qml/: main.qml
qml/components/binaryClock/: BinaryClock.qml
qml/components/wateringSystem/: CircularProgressBar.qml  GreenSwitch.qml  WateringSystem.qml
qml/components/weatherForecast/: WeatherForecast.qml
qml/pages/: FirstPage.qml  SecondPage.qml
qml/utilities/: SlideButton.qml
ui/: CMakeLists.txt
ui/BinaryClockModel/: binaryClock.h
ui/Model/: CMakeLists.txt
ui/Model/BinaryClockModel/: CMakeLists.txt  binaryClockModel.cpp  binaryClockModel.h
ui/Model/ListModel/: CMakeLists.txt  ListModel.h  MultiDimensionListModel.h
ui/Model/Utilities/: DateHelper.cpp  DateHelper.h
ui/Model/WeatherForecastModel/: CMakeLists.txt  weatherForecastModel.cpp  weatherForecastModel.h
ui/qml/: main.qml
ui/qml/components/binaryClock/: BinaryClock.qml
ui/qml/components/weatherForecast/: WeatherForecast.qml
ui/qml/pages/: FirstPage.qml
ui/qml/utilities/: SlideDownWindow.qml
util/: util.h
